# crypto-belief-narrative-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile_dagster  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.lock.txt
config/: kalshi_keywords.yaml  markets_keywords.yaml  narratives.yaml  runtime.yaml
dagster/: dagster.yaml  dagster.yaml.template  workspace.yaml
docs/: alpha_hypothesis.md  architecture.md  dagster_jobs.md  deploy.md  gold_features.md  limitations.md  productionization.md  reproducibility.md
dq/: configuration.yml
scripts/: dagster_control_plane_entrypoint.sh  deploy_dagster.sh  render_dagster_yaml.sh
tests/: conftest.py  test_assets_raw_hourly.py  test_belief_features.py  test_build_gold.py  test_cli_dagster_wrapper.py  test_cli_pipeline_run.py  test_collectors_alternative_me.py  test_collectors_binance.py  test_collectors_gdelt.py  test_collectors_http.py  test_collectors_polymarket.py  test_config.py  test_dagster_assets.py  test_data_issues.py  test_deploy_dagster_script.py  test_duckdb_views.py  test_end_to_end_sample_in_memory.py  test_fear_greed_features.py  test_forward_labels_no_lookahead.py  test_io_guardrails.py  test_kalshi_api_smoke.py  test_kalshi_fetch_trades.py  test_kalshi_hypothesis_scope.py  test_kalshi_repricing_pit.py  test_lake_batches.py  test_lake_compaction.py  test_lake_paths.py  test_lake_retry_config.py  test_lake_s3.py  test_market_tags.py  test_narrative_features.py  test_normalize_binance.py  test_normalize_fear_greed.py  test_normalize_gdelt.py  test_pipeline_steps.py  (+24 more)
(+99 files in other folders)
